# JNIMarshalingPerformanceTesting

./: README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/inasweaterpoorlyknit/jniplayground/: ExampleInstrumentedTest.kt  JNIInstrumentationTests.kt  JNIPerformanceBenchmarkTests.kt  JNITests.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h  noop_types.h  profiler.cpp
app/src/main/java/com/inasweaterpoorlyknit/jniplayground/: JNIFunctions.kt  JNIPlaygroundApplication.kt  MainActivity.kt  MirrorFunctions.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/inasweaterpoorlyknit/jniplayground/: ExampleUnitTest.kt
benchmark/: build.gradle.kts
benchmark/src/androidTest/java/com/inasweaterpoorlyknit/benchmark/: ExampleBenchmark.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
